rs/eros/tests/trybuild/cannot_call_union_on_traced_union.rs
use eros::{IntoUnion};



fn main() {
    let error: eros::ErrorUnion = eros::error!("Error");
    let _error = error.into_union();
}
